--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-mujoco>=3.0.0
-numpy<2
-opencv-python
-ultralytics
-open3d
-scipy
+mujoco==3.3.7
+opencv-python==4.9.0.80
+numpy==1.26.4
+ultralytics==8.3.233
+PyYAML==6.0.3
+open3d==0.19.0
+scipy==1.15.3
+matplotlib==3.5.1
+roboticstoolbox-python==1.1.0
+spatialmath-python==1.1.15
+torch==2.9.1
+torchvision==0.24.1
